--- a/SiteEstatico-main/Site Estatico/css/contato.css
+++ b/SiteEstatico-main/Site Estatico/css/contato.css
@@ -25,11 +25,17 @@ p {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.contact-form {
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 20px;
-    box-sizing: border-box;
+.contact-form,
+iframe {
+    max-width: 800px;
+    margin: 10px auto;
+    text-align: center;
+}
+
+iframe {
+    display: block; 
+    margin: 0 auto; 
+    max-width: 100%; 
 }
 
 label {
@@ -47,18 +53,18 @@ textarea {
     box-sizing: border-box;
 }
 
+.reason-title {
+    text-align: center;
+    margin-bottom: 10px; 
+}
+
 .reason-group {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    justify-content: center;
 }
 
 .reason-inputs {
-    display: flex;
-    align-items: center;
-    margin-right: 20px;
+ margin: 0 10px;
 }
 
 .reason-inputs input {
