--- a/SiteEstatico-main/Site Estatico/css/quemsomos.css
+++ b/SiteEstatico-main/Site Estatico/css/quemsomos.css
@@ -21,9 +21,9 @@ h1 {
 }
 
 .about-us {
-    display: flex;
-    align-items: center;
-    padding: 20px;
+   text-align: center;
+   margin: 20px auto;
+   max-width: 600px;
 }
 
 img {
